2020-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/main.c,
	  src/pdk/gen.h,
	  src/pdk/gen.c:
	  Fix bug #3091, patch by Free-PDK.

2020-07-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdatomic.h: enabled for ds390, force nonbanked for mcs51
	* device/lib/ds390/atomic_flag_clear.c,
	* device/lib/ds390/atomic_flag_test_and_set.c: new, added
	* device/lib/ds390/Makefile.in: added atomic_flag_*
	* device/lib/mcs51/atomic_flag_clear.asm,
	* device/lib/mcs51/atomic_flag_test_and_set.asm: new, added
	* support/regression/tests/atomic.c: enabled for ds390
	* sim/ucsim/z80.src/inst_ed.cc: fixed bug by paying attention to warnings

2020-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.in:
	  Fix bug #3078, fix by Free-PDK.
	* src/SDCCmain.c:
	  Disable --stack-loc deprecation warning for pdk and stm8.

2020-07-27 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/linksrc/lkmain.c:
	  Add -j to help of sdldgb.

2020-07-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/SDCCasm.c,
	  src/SDCCglue.c,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/mappings.i:
	  Fix rgdbs asm generation for gbz80.

2020-07-25 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peep.c:
	  Fix ldh size estimation for gbz80.

2020-07-25 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c,
	  src/port.h:
	  Change implementation of -ba and -bo.

2020-07-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdatomic.h: enable mcs51, atomic_flag must reside in data/idata
	* device/lib/mcs51/Makefile.in: added atomic_flag_test_and_set.rel & atomic_flag_clear.rel,
	  fixed include path
	* support/regression/tests/atomic.c: enabled test for mcs51,
	  added test for atomic_flag within struct

2020-07-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/main.c:
	  Fix initialization of data-seg when using -ba for bug #3088.

2020-07-24 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/linksrc/lkout.c: